ヘッダーひな形完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div id = 'header'></div>
+    <%= render 'layouts/header' %>
     <%= yield %>
   </body>
   <%= javascript_pack_tag 'header' %>
