--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -1,5 +1,7 @@
 <h1>課題図書一覧</h1>
 
-<div id="books"></div>
+<div id = "books"
+  data-_books = <%= @books.to_json %>>
+</div>
 
 <%= javascript_pack_tag 'books' %>
